add couchbase package

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ python:
 - '3.5'
 - '3.6'
 before_install:
+- wget http://packages.couchbase.com/releases/couchbase-release/couchbase-release-1.0-4-amd64.deb
+- sudo dpkg -i couchbase-release-1.0-4-amd64.deb
 - sudo apt-get update
 - sudo apt-get install jq
 - sudo apt-get install libcouchbase-dev
