--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
 - pip install -e .
 - python setup.py install
 script:
-  - sudo docker-compose up
+  - sudo docker-compose up &
   - make tests
 deploy:
   on:
