--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,8 @@ install:
 - pip install -e .
 - python setup.py install
 script:
-  - sudo docker-compose up &
+  - sudo docker-compose up -d
+  - sleep 5
   - make tests
 deploy:
   on:
