--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,8 @@ services:
         - "5433:5432"
       volumes:
         - ./postgres-data:/var/lib/postgresql/data
+
+  redis:
+      image: redis
+      ports:
+        - "6379:6379"
