--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.1'
 
 services:
   postgres:
-      image: postgres
+      image: "postgres"
       environment:
         - POSTGRES_PASSWORD=test
         - POSTGRES_USER=test
@@ -16,3 +16,11 @@ services:
       image: redis
       ports:
         - "6379:6379"
+  kafka:
+      image: "spotify/kafka"
+      ports:
+        - "2181:2181"
+        - "9092:9092"
+      environment:
+        - ADVERTISED_HOST=localhost
+        - ADVERTISED_PORT=9092
