--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,3 +49,15 @@ services:
       MYSQL_ROOT_PASSWORD: "test"
       MYSQL_DATABASE: "test"
 
+  elasticsearch:
+      image: docker.elastic.co/elasticsearch/elasticsearch:7.1.1
+      environment:
+        path.repo: "/tmp"
+        repositories.url.allowed_urls: "http://*"
+        bootstrap.memory_lock: "false"
+        node.name: "test"
+        cluster.initial_master_nodes: "test"
+        discovery.zen.ping.unicast.hosts: "elasticsearch"
+        http.max_content_length: "5mb"
+      ports:
+          - "9200:9200"
