--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
-dist: trusty
+dist: bionic
 language: python
+sudo: true
 python:
-- '3.5'
-- '3.6'
+  - '3.5'
+  - '3.6'
+  - '3.7'
+  - '3.8'
 before_install:
 - wget http://packages.couchbase.com/releases/couchbase-release/couchbase-release-1.0-4-amd64.deb
 - sudo dpkg -i couchbase-release-1.0-4-amd64.deb
