--- a/.travis.yml
+++ b/.travis.yml
@@ -7,14 +7,11 @@ python:
   - '3.7'
   - '3.8'
 before_install:
-- wget http://packages.couchbase.com/releases/couchbase-release/couchbase-release-1.0-6-amd64.deb
-- sudo dpkg -i couchbase-release-1.0-6-amd64.deb
 - sudo apt-get update
 - sudo apt-get install jq
-- sudo apt-get install libcouchbase-dev
 - sudo docker pull jamesdbloom/mockserver
 install:
-- pip install -e "file://`pwd`#egg=catcher-modules[all]"
+- pip install -e "file://`pwd`#egg=catcher-modules[travis]"
 - python setup.py install
 script:
 - sudo docker-compose up -d
