--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,12 @@ python:
   - '3.5'
   - '3.6'
   - '3.7'
-  - '3.8'
 before_install:
 - sudo apt-get update
 - sudo apt-get install jq
 - sudo docker pull jamesdbloom/mockserver
 install:
+- pip install Cython
 - pip install -e "file://`pwd`#egg=catcher-modules[travis]"
 - python setup.py install
 script:
