--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,12 @@ python:
   - '3.7'
   - '3.8'
 before_install:
-- sudo apt-get update
-- sudo apt-get install jq
 - sudo docker pull jamesdbloom/mockserver
+- curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add -
+- curl https://packages.microsoft.com/config/ubuntu/18.04/prod.list > /etc/apt/sources.list.d/mssql-release.list
+- apt-get update
+- apt-get install jq
+- ACCEPT_EULA=Y apt-get install msodbcsql17 unixodbc-dev
 install:
 - pip install Cython
 - pip install -e "file://`pwd`#egg=catcher-modules[travis]"
