--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ python:
 before_install:
 - sudo docker pull jamesdbloom/mockserver
 - curl https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -
-- curl https://packages.microsoft.com/config/ubuntu/18.04/prod.list && echo prod.list | sudo tee -a /etc/apt/sources.list.d/mssql-release.list
+- curl https://packages.microsoft.com/config/ubuntu/18.04/prod.list && echo prod.list | sudo tee -a /etc/apt/sources.list.d/mssql-release.list > /dev/null
 - sudo apt-get update
 - sudo apt-get install jq
 - sudo ACCEPT_EULA=Y apt-get install msodbcsql17 unixodbc-dev
