--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.1'
 
 services:
   postgres:
-    image: "postgres:11"
+    image: "postgres:11-alpine"
     environment:
       POSTGRES_PASSWORD: "test"
       POSTGRES_USER: "test"
