--- a/.github/workflows/tag_master.yml
+++ b/.github/workflows/tag_master.yml
@@ -29,4 +29,5 @@ jobs:
         uses: anothrNick/github-tag-action@1.33.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CUSTOM_TAG: ${{ steps.get-tag.outputs.TAG }}"
+          CUSTOM_TAG: ${{ steps.get-tag.outputs.TAG }}
+          INITIAL_VERSION: 1.0.0
