--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,16 @@
 dist: bionic
 language: python
-sudo: true
 python:
   - '3.5'
   - '3.6'
   - '3.7'
   - '3.8'
+services:
+  - docker
 before_install:
-- sudo docker pull jamesdbloom/mockserver
+- docker pull jamesdbloom/mockserver
+- docker pull alpine:latest
+- docker pull postgres:11-alpine
 - curl https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -
 - sudo curl https://packages.microsoft.com/config/ubuntu/18.04/prod.list -o /etc/apt/sources.list.d/mssql-release.list
 - sudo apt-get update
