--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,13 +52,15 @@ jobs:
           MINIO_ACCESS_KEY: minio
           MINIO_SECRET_KEY: minio123
         options: --name minio-server
-      rabbit:
+      catcher-rabbit:
         image: rabbitmq:3.7.18-management
+        options:
+          - v
         volumes:
-          - ./test/rabbit-config/rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
-          - ./test/rabbit-config/ca_certificate.pem:/etc/rabbitmq/certs/ca_certificate.pem
-          - ./test/rabbit-config/server_certificate.pem:/etc/rabbitmq/certs/server_certificate.pem
-          - ./test/rabbit-config/server_key.pem:/etc/rabbitmq/certs/server_key.pem
+          - $GITHUB_WORKSPACE/test/rabbit-config/rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
+          - $GITHUB_WORKSPACE/test/rabbit-config/ca_certificate.pem:/etc/rabbitmq/certs/ca_certificate.pem
+          - $GITHUB_WORKSPACE/test/rabbit-config/server_certificate.pem:/etc/rabbitmq/certs/server_certificate.pem
+          - $GITHUB_WORKSPACE/test/rabbit-config/server_key.pem:/etc/rabbitmq/certs/server_key.pem
 
     strategy:
       fail-fast: false
