--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -74,7 +74,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -e "file://`pwd`#egg=catcher_modules"
+          pip install -e "file://`pwd`#egg=catcher_modules[travis]"
       - name: Test with pytest
         run: |
           pytest
