--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -69,19 +69,14 @@ jobs:
         options: --name minio-server
         ports:
           - "9001:9000"
-      catcher-rabbit:
-        image: rabbitmq:3.7.18-management
-        ports:
-          - 5672:5672
-          - 5671:5671
-          - 15672:15672
-          - 15671:15671
     strategy:
       fail-fast: false
       matrix:
         python-version: [3.6, 3.7, 3.8, 3.9]
     steps:
       - uses: actions/checkout@v2
+      - name: Run rabbit  # not able to set up rabbit via services because certificates appear only at checkout
+        run: docker-compose up rabbit -d
       - name: Install msodbcsql17
         run: |
           curl https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -
