--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Docker Compose Actions Workflow
+name: Test
 on:
   push:
     branches: [ master ]
@@ -49,18 +49,6 @@ jobs:
           MYSQL_DATABASE: "test"
         ports:
           - "3307:3306"
-      elasticsearch:
-        image: docker.elastic.co/elasticsearch/elasticsearch:7.1.1
-        env:
-          path.repo: "/tmp"
-          repositories.url.allowed_urls: "http://*"
-          bootstrap.memory_lock: "false"
-          node.name: "test"
-          cluster.initial_master_nodes: "test"
-          discovery.zen.ping.unicast.hosts: "elasticsearch"
-          http.max_content_length: "5mb"
-        ports:
-          - "9200:9200"
       minio:
         image: bitnami/minio:latest
         env:
