--- a/.github/workflows/tag_master.yml
+++ b/.github/workflows/tag_master.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Get current version
         run: echo "::set-output name=TAG::$(cat catcher_modules/__init__.py | grep -oP '(\d+\.)(\d+\.)(\*|\d+)')"
         id: get-tag
-          
+
       # commit this tag
       - name: Bump version and push tag
         uses: anothrNick/github-tag-action@1.33.0
@@ -37,13 +37,21 @@ jobs:
         with:
           python-version: '3.x'
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install build
+        run: >-
+          python -m
+          pip install
+          build
+          --user
       - name: Build package
-        run: python -m build
+        run: >-
+          python -m
+          build
+          --sdist
+          --wheel
+          --outdir dist/
+          .
       - name: Publish package
-        uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
+        uses: pypa/gh-action-pypi-publish@release/v1
         with:
           user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
