--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -78,7 +78,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -e "file://`pwd`#egg=catcher_modules[travis]"
+          pip install -e "file://`pwd`#egg=catcher_modules[ci]"
       - name: Test with pytest
         run: |
           pytest
