--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -69,6 +69,7 @@ jobs:
         run: |
           curl https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -
           sudo curl https://packages.microsoft.com/config/ubuntu/18.04/prod.list -o /etc/apt/sources.list.d/mssql-release.list
+          sudo apt-get remove libodbc2:amd64
           sudo apt-get update
           sudo ACCEPT_EULA=Y apt-get install unixodbc-dev
       - name: Set up Python ${{ matrix.python-version }}
